@@ -5,15 +5,21 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 
 public class ExeCmd {
-
+	
 	public static void process(String cmd,String charset) {
+		
 		try {
 			System.out.println("cmd【" +cmd + "】");
-			Process process = Runtime.getRuntime().exec(cmd);
+			Process process = Runtime.getRuntime().exec(new String[]{"sh","-c",cmd});
  
-			new Thread(new StreamDrainer(process.getInputStream(),charset)).start();
-			new Thread(new StreamDrainer(process.getErrorStream(),charset)).start();
-
+			Thread t1 = new Thread(new StreamDrainer(process.getInputStream(),charset));
+			Thread t2 = new Thread(new StreamDrainer(process.getErrorStream(),charset));
+			t1.start();
+			t2.start();
+			
+			t1.join();
+			t2.join();
+			
 			process.getOutputStream().close();
 
 			int exitValue = process.waitFor();
@@ -23,7 +29,10 @@ public class ExeCmd {
 		}
 
 	}
+	
 }
+
+
 
 class StreamDrainer implements Runnable {
 	private InputStream ins;
@@ -39,6 +48,7 @@ class StreamDrainer implements Runnable {
 			
 			BufferedReader reader = new BufferedReader(new InputStreamReader(ins,charset));
 			String line = null;
+			System.out.println("============");
 			while ((line = reader.readLine()) != null) {
 				System.out.println(line);
 			}
